{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 43,
  "lineage": "699d8e75-3cb3-64dd-c85c-c4c9341ee19f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d7aa09e88f2ed2f",
            "association_id": "eipassoc-09eaba394e4dc9d8c",
            "domain": "vpc",
            "id": "eipalloc-02d7aa09e88f2ed2f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-094c5b4fb67d81260",
            "private_dns": "ip-10-0-1-13.ec2.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-18-235-145-138.compute-1.amazonaws.com",
            "public_ip": "18.235.145.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_Igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:internet-gateway/igw-078862650daa68b3b",
            "id": "igw-078862650daa68b3b",
            "owner_id": "953736820577",
            "tags": {
              "Name": "terraform_internet_gate"
            },
            "tags_all": {
              "Name": "terraform_internet_gate"
            },
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pub-sub-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:953736820577:loadbalancer/app/pub-sub-alb/abc8cdbfb5510807",
            "arn_suffix": "app/pub-sub-alb/abc8cdbfb5510807",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pub-sub-alb-2101318391.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:953736820577:loadbalancer/app/pub-sub-alb/abc8cdbfb5510807",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pub-sub-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d66ad1615ff8bac7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a556e9cdb0f2307"
              },
              {
                "subnet_id": "subnet-08b8e891e111fbaec"
              }
            ],
            "subnets": [
              "subnet-08a556e9cdb0f2307",
              "subnet-08b8e891e111fbaec"
            ],
            "tags": {
              "Name": "Pub-Sub-ALB"
            },
            "tags_all": {
              "Name": "Pub-Sub-ALB"
            },
            "vpc_id": "vpc-09571d2f27cebbe91",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ALB_SG",
            "aws_subnet.public_sub_1",
            "aws_subnet.public_sub_2",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:953736820577:listener/app/pub-sub-alb/abc8cdbfb5510807/9bd80429ffbb08d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:953736820577:targetgroup/alb-tg/62ebba4ad69be0c9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:953736820577:listener/app/pub-sub-alb/abc8cdbfb5510807/9bd80429ffbb08d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:953736820577:loadbalancer/app/pub-sub-alb/abc8cdbfb5510807",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.pub-sub-alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.ALB_SG",
            "aws_subnet.public_sub_1",
            "aws_subnet.public_sub_2",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:953736820577:targetgroup/alb-tg/62ebba4ad69be0c9",
            "arn_suffix": "targetgroup/alb-tg/62ebba4ad69be0c9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200,202",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 45,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:953736820577:targetgroup/alb-tg/62ebba4ad69be0c9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d7aa09e88f2ed2f",
            "association_id": "eipassoc-09eaba394e4dc9d8c",
            "connectivity_type": "public",
            "id": "nat-01c6cd3fbceb598e6",
            "network_interface_id": "eni-094c5b4fb67d81260",
            "private_ip": "10.0.1.13",
            "public_ip": "18.235.145.138",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b8e891e111fbaec",
            "tags": {
              "Name": "terraform_nat_gateway"
            },
            "tags_all": {
              "Name": "terraform_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.ngw-elasticip",
            "aws_internet_gateway.terraform_Igateway",
            "aws_subnet.public_sub_1",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:route-table/rtb-03daf636b8208dd12",
            "id": "rtb-03daf636b8208dd12",
            "owner_id": "953736820577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01c6cd3fbceb598e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw-elasticip",
            "aws_internet_gateway.terraform_Igateway",
            "aws_nat_gateway.terraform_nat",
            "aws_subnet.public_sub_1",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:route-table/rtb-0ed2c6267eb8b1a2e",
            "id": "rtb-0ed2c6267eb8b1a2e",
            "owner_id": "953736820577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078862650daa68b3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub_route"
            },
            "tags_all": {
              "Name": "Pub_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_Igateway",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a41998beeba463a",
            "route_table_id": "rtb-03daf636b8208dd12",
            "subnet_id": "subnet-089563fcb9fa59516"
          },
          "dependencies": [
            "aws_eip.ngw-elasticip",
            "aws_internet_gateway.terraform_Igateway",
            "aws_nat_gateway.terraform_nat",
            "aws_route_table.private_route",
            "aws_subnet.private_sub_1",
            "aws_subnet.public_sub_1",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1acc6c7bcc30802",
            "route_table_id": "rtb-03daf636b8208dd12",
            "subnet_id": "subnet-0b16e58c718df27f5"
          },
          "dependencies": [
            "aws_eip.ngw-elasticip",
            "aws_internet_gateway.terraform_Igateway",
            "aws_nat_gateway.terraform_nat",
            "aws_route_table.private_route",
            "aws_subnet.private_sub_2",
            "aws_subnet.public_sub_1",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_rt_as1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045ca27a6feaaae55",
            "route_table_id": "rtb-0ed2c6267eb8b1a2e",
            "subnet_id": "subnet-08b8e891e111fbaec"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_Igateway",
            "aws_route_table.public_route",
            "aws_subnet.public_sub_1",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_rt_as2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08841867a0726292f",
            "route_table_id": "rtb-0ed2c6267eb8b1a2e",
            "subnet_id": "subnet-08a556e9cdb0f2307"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_Igateway",
            "aws_route_table.public_route",
            "aws_subnet.public_sub_2",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:security-group/sg-0d66ad1615ff8bac7",
            "description": "Security Group for the App Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d66ad1615ff8bac7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alb-s",
            "name_prefix": "",
            "owner_id": "953736820577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "launch_tem-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:security-group/sg-0b4042c2772c06636",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4042c2772c06636",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d66ad1615ff8bac7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d66ad1615ff8bac7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for ASG",
            "name_prefix": "",
            "owner_id": "953736820577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB_SG",
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:subnet/subnet-089563fcb9fa59516",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089563fcb9fa59516",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953736820577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:subnet/subnet-0b16e58c718df27f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b16e58c718df27f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953736820577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:subnet/subnet-08b8e891e111fbaec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b8e891e111fbaec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953736820577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:subnet/subnet-08a556e9cdb0f2307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a556e9cdb0f2307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953736820577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-09571d2f27cebbe91"
          },
          "dependencies": [
            "aws_vpc.vpc_for_tera"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_for_tera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953736820577:vpc/vpc-09571d2f27cebbe91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0527a4522d297b4de",
            "default_route_table_id": "rtb-079cf9d58747c1f4d",
            "default_security_group_id": "sg-04bff075f258dc167",
            "dhcp_options_id": "dopt-00c3f1c7c7be97c3f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09571d2f27cebbe91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079cf9d58747c1f4d",
            "owner_id": "953736820577",
            "tags": {
              "Name": "terravpc"
            },
            "tags_all": {
              "Name": "terravpc"
            }
          }
        }
      ]
    }
  ]
}